[package]
name = "tibet-store-mmu"
version = "0.1.0"
edition = "2021"
description = "MMU Illusion — userfaultfd proof-of-concept for transparent RAM virtualization"
license = "MIT"
authors = ["Gemini <gemini.aint>", "Jasper van de Meent <jasper@humotica.com>"]
publish = false  # PoC — niet publiceren

[dependencies]
userfaultfd = "0.8.1"
libc = "0.2"
zstd = "0.13"
tokio = { version = "1.0", features = ["full"] }

# Bifurcation — encrypt-by-default op page-niveau
tibet-trust-kernel = { git = "https://github.com/Humotica/tibet-trust-kernel", branch = "main" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[[bin]]
name = "spaceshuttle"
path = "src/bin/spaceshuttle.rs"

[[bin]]
name = "scaletest"
path = "src/bin/scaletest.rs"

[[bin]]
name = "raidtest"
path = "src/bin/raidtest.rs"

[[bin]]
name = "gguf-shuttle"
path = "src/bin/gguf_shuttle.rs"

[[bin]]
name = "hugepage-shuttle"
path = "src/bin/hugepage_shuttle.rs"

[[bench]]
name = "mmu_bench"
harness = false

[[bench]]
name = "criterion_mmu"
harness = false
